# gitai

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: ai.rs  git.rs  main.rs  settings.rs
