[package]
name = "gitai"
version = "0.0.1"
edition = "2021"
authors = ["Jacob Bourne"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dirs-next = "2.0.0"
git2 = "0.16.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
reqwest = {version = "0.11.14", features = ["blocking"]}
