[package]
name = "gitai"
version = "0.0.1"
edition = "2021"
authors = ["Jacob Bourne"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
clap-num = "1.0.2"
dirs-next = "2.0.0"
git2 = "0.16.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
reqwest = {version = "0.11.14", features = ["blocking", "json"]}
chrono = "0.4.23"
log = "0.4.17"
env_logger = "0.10.0"
url = "2.3.1"
time = "0.1.40"
termion = "2.0.1"
